syntax = "proto3";
package euterpe.teapot.v1;
option go_package = "github.com/strideynet/euterpe-backend/service.teapot/proto/v1;teapotv1pb";

import "google/protobuf/timestamp.proto";

service teapot {
    rpc GetById(GetByIdRequest) returns (GetByIdResponse);
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc CalculateVolume(CalculateVolumeRequest) returns (CalculateVolumeResponse);
}

// Teapot represents a teapot
message Teapot {
    string id = 1;
    string name = 2;
    double radius = 3;
    double height = 4;

    google.protobuf.Timestamp create_time = 5;
    google.protobuf.Timestamp update_time = 6;

    string description = 7;
}

message GetByIdRequest {
    string id = 1;
}

message GetByIdResponse {
    Teapot teapot = 1;
}

message CreateRequest {
    string name = 1;
    string description = 2; // description is a tweet-length
    double radius = 3;
    double height = 4;
}

message CreateResponse {
    Teapot teapot = 1;
}

message CalculateVolumeRequest {
    string id = 1;
}

message CalculateVolumeResponse {
    double volume = 1;
}

